# libglvnd

./: Makefile.am  configure.ac
doc/: app_profile_format.md
include/: Makefile.am
include/glvnd/: GLdispatchABI.h  glxserverabi.h  libglxabi.h
src/: Makefile.am
src/EGL/: Makefile.am
src/GL/: Makefile.am
src/GLESv1/: Makefile.am
src/GLESv2/: Makefile.am
src/GLX/: Makefile.am  libglxmapping.c  libglxmapping.h
src/GLdispatch/: Makefile.am
src/GLdispatch/vnd-glapi/: Makefile.am  entry_files.mk  entry_ppc64le_tls.c  entry_ppc64le_tsd.c
src/OpenGL/: Makefile.am
src/generate/: glvnd_gen.mk
src/glxserver/: Makefile.am  generate_dispatch_stubs.py  glxcmds.c  glxext.c  glxserver.h  glxservermapping.c  glxservervendor.c  glxservervendor.h  xabihelpers.c  xabihelpers.h
src/util/: Makefile.am  app_profile.c  app_profile.h  app_profile_parser.c  glvnd_genentry.c  utils_misc.c  utils_misc.h
tests/: Makefile.am
tests/dummy/: Makefile.am  patchentrypoints.c
